@@ -8,7 +8,6 @@ import java.util.Map;
 import java.util.Map.Entry;
 import java.util.Set;
 import java.util.StringTokenizer;
-import java.util.stream.Collectors;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -16,7 +15,6 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import jakarta.servlet.http.HttpServletRequest;
-import jakarta.servlet.http.HttpServletResponse;
 import net.bigtangle.core.UserData;
 import net.bigtangle.core.Utils;
 import net.bigtangle.core.exception.BlockStoreException;
@@ -44,7 +42,7 @@ public class UserDataService {
     public AbstractResponse getUserDataList(int blocktype, List<String> pubKeyList, FullBlockStore store)
             throws BlockStoreException {
         List<UserData> userDatas = store.getUserDataListWithBlocktypePubKeyList(blocktype, pubKeyList);
-        List<String> dataList = new ArrayList<String>();
+        List<String> dataList = new ArrayList<>();
         for (UserData userData : userDatas) {
             if (userData.getData() == null) {
                 continue;
@@ -54,8 +52,8 @@ public class UserDataService {
         return UserDataResponse.createUserDataResponse(dataList);
     }
 
-    public boolean ipCheck(String reqCmd, byte[] contentBytes, HttpServletResponse httpServletResponse,
-            HttpServletRequest httprequest) {
+    public boolean ipCheck(String reqCmd, byte[] contentBytes,
+                           HttpServletRequest httprequest) {
         if (!serverConfiguration.getIpcheck())
             return true;
 
@@ -70,7 +68,7 @@ public class UserDataService {
             return false;
         }
         if (denieds.contains(remoteAddr)) {
-            logger.debug("denied " + remoteAddr + "  size denieds=" + denieds.size());
+            logger.debug("denied {}  size denieds={}", remoteAddr, denieds.size());
             return false;
         }
         return true;
@@ -80,7 +78,7 @@ public class UserDataService {
     public void addStatistcs(String reqCmd, String remoteAddr) {
         List<ApiCall> l = staticsticCalls.get(remoteAddr);
         if (l == null) {
-            l = new ArrayList<ApiCall>();
+            l = new ArrayList<>();
             l.add(new ApiCall(remoteAddr, reqCmd, System.currentTimeMillis()));
             staticsticCalls.put(remoteAddr, l);
         } else {
@@ -89,28 +87,28 @@ public class UserDataService {
 
     }
 
-    Map<String, List<ApiCall>> staticsticCalls = new HashMap<String, List<ApiCall>>();
-    Set<String> denieds = new HashSet<String>();
-    Long updatetime = 0l;
-    Long updatetimeStat = 0l;
+    Map<String, List<ApiCall>> staticsticCalls = new HashMap<>();
+    Set<String> denieds = new HashSet<>();
+    Long updatetime = 0L;
+    Long updatetimeStat = 0L;
 
     // last 15 seconds schedule interval
     // call api 15 times per seconds, as attack
     public synchronized void calcDenied() {
         // if(! serverConfiguration.getIpcheck()) return ;
         try {
-            logger.debug("calcDenied staticsticCalls size =  " + staticsticCalls.size());
+            logger.debug("calcDenied staticsticCalls size =  {}", staticsticCalls.size());
             for (Entry<String, List<ApiCall>> a : staticsticCalls.entrySet()) {
 
                 List<ApiCall> s = a.getValue().stream().filter(
                         c -> c != null && c.getTime() != null && c.getTime() > (System.currentTimeMillis() - 15000))
-                        .collect(Collectors.toList());
-                logger.debug("a.getKey() calls =  " + a.getKey() + " -> " + s.size());
+                        .toList();
+                logger.debug("a.getKey() calls =  {} -> {}", a.getKey(), s.size());
                 for (ApiCall l : s) {
-                    logger.debug(" a.getKey() calls  " + a.getKey() + "  detail " + l.toString());
+                    logger.debug(" a.getKey() calls  {}  detail {}", a.getKey(), l.toString());
                 }
                 if (s.size() > 9) {
-                    logger.debug("add to may be denied = " + a.getKey());
+                    logger.debug("add to may be denied = {}", a.getKey());
 
                     denieds.add(a.getKey());
                 }
@@ -120,20 +118,20 @@ public class UserDataService {
         }
         if (updatetimeStat < System.currentTimeMillis() - 60 * 1000) {
             logger.debug("staticsticCalls reset  ");
-            staticsticCalls = new HashMap<String, List<ApiCall>>();
+            staticsticCalls = new HashMap<>();
             updatetimeStat = System.currentTimeMillis();
         }
         if (updatetime < System.currentTimeMillis() - 2 * 60 * 60 * 1000) {
             logger.debug("reset denied  ");
-            denieds = new HashSet<String>();
+            denieds = new HashSet<>();
             updatetime = System.currentTimeMillis();
         }
     }
 
     public String remoteAddr(HttpServletRequest request) {
-        String remoteAddr = "";
+        String remoteAddr;
         remoteAddr = request.getHeader("X-FORWARDED-FOR");
-        if (remoteAddr == null || "".equals(remoteAddr)) {
+        if (remoteAddr == null || remoteAddr.isEmpty()) {
             remoteAddr = request.getRemoteAddr();
         } else {
             StringTokenizer tokenizer = new StringTokenizer(remoteAddr, ",");
@@ -147,8 +145,4 @@ public class UserDataService {
         return remoteAddr;
     }
 
-    public String[] serverSeeds() {
-        return new String[] { "81.169.156.203", "61.181.128.236", "61.181.128.230" };
-
-    }
 }
